🐛 Fix spacing

--- a/src/styles/components/_clap-button.scss
+++ b/src/styles/components/_clap-button.scss
@@ -2,7 +2,7 @@
   @include transition;
   transition-property: box-shadow;
   border-radius: 50%;
-  margin: 0.5em 0.5em 2em;
+  margin: 1em 0.5em 2em;
 
   &.pulse {
     animation: pulse 2s infinite;
